--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,34 @@
+@font-face {
+  font-family: "CircularAir-Bold";
+  src: url("./fonts/Circular_Air-Bold.woff") format("woff"),
+    url("./fonts/Circular_Air-Bold.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "CircularAir";
+  src: url("./fonts/Circular_Air-Book.woff") format("woff"),
+    url("./fonts/Circular_Air-Book.ttf") format("truetype");
+}
+
+@font-face {
+  font-family: "CircularAir-Light";
+  src: url("./fonts/Circular_Air-Light.woff") format("woff"),
+    url("./fonts/Circular_Air-Light.ttf") format("truetype");
+}
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "CircularAir", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+a {
+  color: #484848;
+  text-decoration: none;
+}
+
+.bodyrow {
+  margin-top: 48px;
+}
+
+.cardContainer {
+  position: relative;
 }
