--- a/src/ExploreCard/ExploreCard.css
+++ b/src/ExploreCard/ExploreCard.css
@@ -4,6 +4,7 @@
   border: 1px solid rgba(72, 72, 72, 0.2);
   box-shadow: 0 2px 4px rgba(72, 72, 72, 0.1);
   border-radius: 4px;
+  min-width: 235px;
 }
 
 .explore-card-image {
@@ -14,4 +15,9 @@
   flex: 1;
   margin-left: 24px;
   font-weight: bold;
+}
+.explore-cards {
+  display: flex;
+  min-width: 300px;
+  overflow: hidden;
 }
