--- a/src/BodySection/roundButton.css
+++ b/src/BodySection/roundButton.css
@@ -7,7 +7,7 @@
   width: 40px;
   height: 40px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  background-image: url("Shape-5.svg");
+  background-image: url("shape-5.svg");
   background-repeat: no-repeat;
   background-position-x: 15px;
   background-position-y: 10px;
