--- a/src/Grid.css
+++ b/src/Grid.css
@@ -7,8 +7,10 @@ body {
 
 .container {
   max-width: 966px;
+  min-width: 310px;
   margin-left: auto;
   margin-right: auto;
+  padding: 0 1em;
 }
 
 .row {
@@ -274,4 +276,52 @@ body {
   .col-lg-12 {
     flex-basis: 100%;
   }
+}
+
+.col-offset-0 {
+  margin-left: 0;
+}
+
+.col-offset-1 {
+  margin-left: 8.33333333%;
+}
+
+.col-offset-2 {
+  margin-left: 16.66666667%;
+}
+
+.col-offset-3 {
+  margin-left: 25%;
+}
+
+.col-offset-4 {
+  margin-left: 33.33333333%;
+}
+
+.col-offset-5 {
+  margin-left: 41.66666667%;
+}
+
+.col-offset-6 {
+  margin-left: 50%;
+}
+
+.col-offset-7 {
+  margin-left: 58.33333333%;
+}
+
+.col-offset-8 {
+  margin-left: 66.66666667%;
+}
+
+.col-offset-9 {
+  margin-left: 75%;
+}
+
+.col-offset-10 {
+  margin-left: 83.33333333%;
+}
+
+.col-offset-11 {
+  margin-left: 91.66666667%;
 }
