--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,18 @@
     url("./fonts/Circular_Air-Light.ttf") format("truetype");
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Circular", sans-serif;
+  color: #383838;
+}
+
 a {
   color: #484848;
   text-decoration: none;
+}
+
+button:focus {
+  outline: 0;
 }
